Fixed issue with side-ways scrolling on mobile

--- a/blocks/iispmun-bannerhead/style.css
+++ b/blocks/iispmun-bannerhead/style.css
@@ -15,8 +15,8 @@
 
 .iispmun-watermark {
     position: absolute;
-    min-width: 900px;
-    width: 75%;
+    max-width: 1100px;
+    width: 100vw;
 
     opacity: 8%;
 }
